# chorebot

./: .gitignore  PR_SUMMARY.md  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
SimpleRobotServer/: .gitignore  CHANGES.md  MULTI_ROBOT_GUIDE.md  QUICKSTART.md  README.md  README_UV.md  SUMMARY.md  UV_GUIDE.md  config.example.multiple_robots.json  pyproject.toml  requirements.txt  simple_robot_server.py  test_client.py
SimpleRobotServer/robots/: README.md
app/: Compass.tsx  ControlPointVisualizer.tsx  ControlSliders.tsx  ExternalGoalVisualizer.tsx  Grid.tsx  HandViewer.tsx  HandVisualizer.tsx  IKRobot.ts  IKRobotComponent.tsx  IKRobotFrame.tsx  IKRobotGroup.tsx  IKTest.ts  IKVisualizer.tsx  RobotVisualizer.tsx  backendPlan.md  drawIKVisualizers.ts  layout.tsx  page.tsx  teletable.model.ts  todo.md  useDrawingUtils.ts  useHandLandmarker.tsx  useLoop.tsx  useWebcam.ts
app/api/: README.md
app/components/: MonodepthViewer3D.tsx
app/controltest/: ControlPageControlPanel.tsx  page.tsx
app/hooks/: useCamera.ts  useConnectionRefresh.ts  useControlRequest.ts  useMultiCamera.ts  usePeer.ts  usePeerJS.ts  useRobotWebSocket.ts  useRoomRealtime.ts  useVideoCall.ts
app/host/: page.tsx
app/iktest/: page.tsx
app/laser/: LaserCanvas.tsx  (+2 more)
patches/: closed-chain-ik+0.0.3.patch  closed-chain-ik.patch
robot_server/: README.md  USB_FORWARDING_GUIDE.md  forward_all_usb_devices.bat  forward_usb_devices.bat  forward_usb_devices_improved.bat  forward_usb_devices_simple.bat  test_stay_open.bat
tests/: realtime.spec.ts
(+48 files in other folders)
