[project]
name = "simple-robot-server"
version = "0.1.0"
description = "Simple WebSocket server for direct robot joint control - no IK, no WSL required"
authors = [{name = "TeleTable Developer"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pyserial>=3.5",
    "lerobot[feetech]",
    "av>=11.0.0,<16.0.0",
]

[project.scripts]
simple-robot-server = "simple_robot_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

